支持输出到WordPress主题的gulp流程

--- a/package.json
+++ b/package.json
@@ -8,14 +8,23 @@
   },
   "repository": "http://sprite.tech:3000/rainkolwa/young-bird.git",
   "devDependencies": {
-    "autoprefixer": "^7.0.1",
-    "browser-sync": "^2.18.8",
+    "autoprefixer": "^7.2.5",
+    "browser-sync": "^2.23.6",
+    "css-mqpacker": "^6.0.2",
+    "cssnano": "^3.10.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
+    "gulp-deporder": "^1.1.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-newer": "^1.4.0",
     "gulp-order": "^1.1.1",
-    "gulp-postcss": "^7.0.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-postcss": "^7.0.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-strip-debug": "^2.0.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8",
+    "postcss-assets": "^5.0.0"
   },
   "keywords": [],
   "author": "rainkolwa <pluvo.lee@gmail.com>",
