--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "ISC",
   "dependencies": {
     "html5sortable": "^0.6.3",
-    "jquery-bar-rating": "^1.2.2"
+    "jquery-bar-rating": "^1.2.2",
+    "owl.carousel": "^2.2.0"
   }
 }
